# cpp-lab-2

./: CMakeLists.txt  archive_module.h  control_center_module.h  exceptions.h  generator_module.h  habitation_module.h  integrator.h  keeper.h  local_computer.h  main.cpp  main_reactor.h  module.cpp  module.h  observer.h  robot.cpp  robot.h  robot_factory.h  station.cpp  station.h
